05_autoscaling-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  labels:
    run: php-apache
  namespace: demok8s
spec:
  replicas: 2
  selector:
    matchLabels:
      run: php-apache
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
        - name: php-apache
          image: php:8.2-apache
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
            requests:
              memory: "100Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  labels:
    run: php-apache
  namespace: demok8s
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30088
  selector:
    run: php-apache
